--- a/public/styles.css
+++ b/public/styles.css
@@ -1,38 +1,146 @@
-/* Основные стили для всего документа */
-body {
-  height: 100vh;
-  width: 100%;
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #ffffff;
-  background: #171f2a;
   font-family: "Monocraft";
-  overflow: hidden; /* Запрещаем и вертикальную, и горизонтальную прокрутку */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 180px; /* Отступ под нижний контейнер */
 }
 
-/* Стили для контейнера с Canvas */
-.profile-photo-container {
+body {
+  height: 100vh;
+  width: 100%;
+  color: #ffffff;
+  background: #171f2a;
+  overflow: hidden;
+  position: relative;
+}
+
+/* Loading screen */
+
+.loading-screen {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 18px;
+  flex-direction: column;
+  transition: 0.2s;
+}
+
+.loading-screen_image {
+  height: 64px;
+  width: 64px;
+  min-width: 64px;
+}
+
+.loading-screen_text {
+  color: #fff;
+  margin-top: 18px;
+  width: 250px;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+/* Upload screen */
+
+.empty-screen {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: 0.2s;
+}
+
+.empty-screen_text {
+  color: #fff;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  width: 250px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.empty-screen_upload-button {
+  position: absolute;
+  left: 16px;
+  right: 16px;
+  bottom: 24px;
+}
+
+/* Initial screen */
+
+.initial-screen {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  transition: 0.2s;
+  padding: 30px 16px 24px;
+}
+
+.initial-screen_image {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  min-height: 10%;
+  max-width: 100%;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 #canvas {
-  width: 100%;
-  max-width: 350px; /* Ограничьте максимальную ширину */
-  aspect-ratio: 1 / 1; /* Соотношение сторон 1:1 для круглой формы */
-  border-radius: 50%;
-  object-fit: cover;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
-/* Стили для слайдера */
+.initial-screen_upload-button {
+  position: relative;
+  width: 100%;
+  margin-top: 40px;
+}
+
+/* #screen-initial-uploader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 1;
+  } */
+
+.initial-screen_range-text {
+  margin-top: 30px;
+  color: #8694a1;
+  font-size: 15px;
+  font-weight: 500;
+}
+
 .slider-container {
   display: flex;
   align-items: center;
@@ -42,20 +150,61 @@ body {
 }
 
 #pixel-size {
-  width: 250px; /* Увеличенная длина слайдера */
+  margin-top: 20px;
+  width: 100%;
   -webkit-appearance: none;
   appearance: none;
   background: #314156;
-  height: 15px; /* Увеличенная высота слайдера */
-  border-radius: 6px; /* Немного более округлые края */
+  height: 15px;
+  border-radius: 6px;
   cursor: pointer;
   outline: none;
 }
 
+.initial-screen_buttons {
+  margin-top: 80px;
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+}
+
+.screen-initial-action-button {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.initial-screen_share-button_icon-spinner,
+.initial-screen_upload-button_icon-spinner,
+.empty-screen_upload-button_icon-spinner,
+.initial-screen_save-button_icon-spinner {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  animation: rotating 0.7s linear infinite;
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
+  min-width: 24px;
+  transition: 0.2s;
+}
+
+.active-spinner {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Common */
+
 #pixel-size::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 26px; /* Увеличенный размер ползунка */
+  width: 26px;
   height: 26px;
   background-color: #248bda;
   border-radius: 50%;
@@ -64,7 +213,7 @@ body {
 }
 
 #pixel-size::-moz-range-thumb {
-  width: 24px; /* Увеличенный размер ползунка */
+  width: 24px;
   height: 24px;
   background-color: #248bda;
   border-radius: 50%;
@@ -72,61 +221,66 @@ body {
   border: none;
 }
 
-/* Нижний контейнер */
-.footer {
-  width: 100%;
-  background-color: transparent;
+.active-screen {
+  opacity: 1;
+  position: relative;
+  visibility: visible;
+}
+
+/* Buttons */
+
+.button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  position: fixed;
-  bottom: 0;
-}
-
-.footer-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-  width: 100%;
-  max-width: 300px;
-}
-
-/* Общие стили для кнопок Upload и Get */
-.custom-label,
-.custom-button {
-  display: block;
-  width: 100%;
-  height: 50px;
-  background-color: #314156;
-  color: #8794a1;
+  gap: 10px;
+  height: 54px;
+  border-radius: 12px;
   border: none;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 500;
+  outline: none;
   cursor: pointer;
-  text-align: center;
-  line-height: 50px;
-  transition: background-color 0.3s ease;
 }
 
-/* Скрытие input для загрузки изображений */
-#upload-image {
-  display: none;
-}
-
-/* Специфический стиль для кнопки "Get" */
-.custom-button {
-  background-color: #248bda;
+.secondary {
+  background-color: #202a38;
   color: #ffffff;
 }
 
-/* Hover-эффекты для кнопок */
-.custom-label:hover {
-  background-color: #293648;
+.primary {
+  background-color: #1f75b7;
+  color: #ffffff;
 }
 
-.custom-button:hover {
-  background-color: #207cc2;
+.success {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+#empty-uploader,
+#initial-uploader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.button-icon {
+  height: 14px;
+  width: 14px;
+  min-width: 14px;
+}
+
+@keyframes rotating {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(360deg);
+  }
 }
